# RustJNI

./: .gitignore  README.md  build.gradle.kts  local.properties
.github/: CODEOWNERS
.github/workflows/: android-ci.yaml  cd.yaml
doc/: CHANGELOG.md
gradle-plugin/: build.gradle.kts
gradle-plugin-test/: build.gradle.kts  settings.gradle.kts
gradle-plugin/gradle/wrapper/: gradle-wrapper.properties
sample/app/: build.gradle.kts
sample/app/src/main/: AndroidManifest.xml
sample/flappybird-wasm/: .gitignore  build.gradle.kts  clean-generated.bat  clean-generated.sh  run-browser.bat  run-browser.sh  settings.gradle.kts
sample/flappybird-wasm/rust/: Cargo.toml
sample/flappybird-wasm/rust/src/: lib.rs
sample/flappybird-wasm/so/app/: build.gradle.kts
sample/flappybird-wasm/standalone/app/: build.gradle.kts
sample/flappybird-wasm/wasm/game/: Cargo.toml
sample/flappybird-wasm/wasm/game/src/: lib.rs
sample/game/: settings.gradle.kts
sample/game/app/: build.gradle.kts
sample/game/gradle/: libs.versions.toml
sample/gradle/wrapper/: gradle-wrapper.properties
sample/java/app/: build.gradle.kts
sample/java/gradle/: libs.versions.toml
sample/kotlin/: build.gradle.kts  settings.gradle.kts
sample/kotlin/app/: build.gradle.kts
sample/kotlin/gradle/: libs.versions.toml
sample/restapi/: settings.gradle.kts
sample/restapi/app/: build.gradle.kts
sample/restapi/app/src/main/rust/: Cargo.toml
sample/restapi/app/src/main/rust/.cargo/: config.toml
sample/restapi/app/src/main/rust/src/: lib.rs
sample/restapi/gradle/: libs.versions.toml
(+108 files in other folders)
